--- a/app/src/main/res/layout/fragment_qdjl.xml
+++ b/app/src/main/res/layout/fragment_qdjl.xml
@@ -11,11 +11,11 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="248.5dp">
+        android:layout_height="298.5dp">
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="192dp"
+            android:layout_height="242dp"
             android:background="@color/bg_r_5"
             android:layout_marginBottom="20dp"/>
 
@@ -44,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/tv_wdjf"
                     android:textColor="@color/white"
-                    android:textSize="12sp"
+                    android:textSize="14dp"
                     android:textStyle="bold"/>
 
                 <TextView
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textColor="@color/white"
-                    android:textSize="30sp"
+                    android:textSize="35dp"
                     android:textStyle="bold"/>
 
             </LinearLayout>
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/tv_xjsy"
                     android:textColor="@color/white"
-                    android:textSize="12sp"
+                    android:textSize="14dp"
                     android:textStyle="bold"/>
 
                 <TextView
@@ -80,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textColor="@color/white"
-                    android:textSize="30sp"
+                    android:textSize="35dp"
                     android:textStyle="bold"/>
             </LinearLayout>
         </LinearLayout>
@@ -93,31 +93,42 @@
             android:layout_marginTop="2dp"
             android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
-            android:layout_height="110.5dp"
+            android:layout_height="160dp"
             android:layout_gravity="bottom"
             android:background="@color/bg_b_30"
             app:cardCornerRadius="8dp"
             app:cardElevation="5dp">
 
             <TextView
-                android:layout_marginTop="20.5dp"
+                android:id="@+id/tv_lxqdts"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="12.5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_marginTop="30dp"
                 android:layout_marginLeft="12.5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_qdlx_tip"
-                android:textSize="13sp"
+                android:textSize="12dp"
                 android:textColor="@color/bg_b_1"/>
 
             <LinearLayout
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginTop="49.5dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginBottom="16dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center">
 
                 <LinearLayout
+                    android:padding="2dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -137,6 +148,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="1天"
+                            android:textSize="13dp"
                             android:textColor="@color/black"/>
 
                         <TextView
@@ -144,7 +156,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="100"
-                            android:textColor="@color/bg_r_5"/>
+                            android:textSize="12dp"
+                            android:textColor="@color/bg_r_2"/>
 
                         <ImageView
                             android:id="@+id/id_iv_1"
@@ -156,9 +169,8 @@
 
                 </LinearLayout>
 
-
-
                 <LinearLayout
+                    android:padding="2dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -177,13 +189,16 @@
                             android:id="@+id/id_tv_2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2天"/>
+                            android:text="2天"
+                            android:textColor="@color/black"
+                            android:textSize="13dp"/>
 
                         <TextView
                             android:id="@+id/id_tvv_2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="100"
+                            android:textSize="12dp"
                             android:textColor="@color/bg_r_2"/>
 
                         <ImageView
@@ -196,8 +211,8 @@
 
                 </LinearLayout>
 
-
                 <LinearLayout
+                    android:padding="2dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -216,14 +231,17 @@
                             android:id="@+id/id_tv_3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="3天"/>
+                            android:text="3天"
+                            android:textColor="@color/black"
+                            android:textSize="13dp"/>
 
                         <TextView
                             android:id="@+id/id_tvv_3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="100"
-                            android:textColor="@color/bg_r_5"/>
+                            android:textSize="12dp"
+                            android:textColor="@color/bg_r_2"/>
 
                         <ImageView
                             android:id="@+id/id_iv_3"
@@ -235,8 +253,8 @@
 
                 </LinearLayout>
 
-
                 <LinearLayout
+                    android:padding="2dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -255,14 +273,17 @@
                             android:id="@+id/id_tv_4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="4天"/>
+                            android:text="4天"
+                            android:textColor="@color/black"
+                            android:textSize="13dp"/>
 
                         <TextView
                             android:id="@+id/id_tvv_4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="100"
-                            android:textColor="@color/bg_r_5"/>
+                            android:textSize="12dp"
+                            android:textColor="@color/bg_r_2"/>
 
                         <ImageView
                             android:id="@+id/id_iv_4"
@@ -275,6 +296,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:padding="2dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -293,14 +315,17 @@
                             android:id="@+id/id_tv_5"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="5天"/>
+                            android:text="5天"
+                            android:textColor="@color/black"
+                            android:textSize="13dp"/>
 
                         <TextView
                             android:id="@+id/id_tvv_5"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="100"
-                            android:textColor="@color/bg_r_5"/>
+                            android:textSize="12dp"
+                            android:textColor="@color/bg_r_2"/>
 
                         <ImageView
                             android:id="@+id/id_iv_5"
@@ -313,6 +338,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:padding="2dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -331,14 +357,17 @@
                             android:id="@+id/id_tv_6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="6天"/>
+                            android:text="6天"
+                            android:textColor="@color/black"
+                            android:textSize="13dp"/>
 
                         <TextView
                             android:id="@+id/id_tvv_6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="100"
-                            android:textColor="@color/bg_r_5"/>
+                            android:textSize="12dp"
+                            android:textColor="@color/bg_r_2"/>
 
                         <ImageView
                             android:id="@+id/id_iv_6"
@@ -350,8 +379,8 @@
 
                 </LinearLayout>
 
-
                 <LinearLayout
+                    android:padding="2dp"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -364,20 +393,23 @@
                         android:layout_height="44dp"
                         android:orientation="vertical"
                         android:gravity="center"
-                        android:background="@drawable/bg_red_8_2">
+                        android:background="@drawable/bg_qd_m_2">
 
                         <TextView
                             android:id="@+id/id_tv_7"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="7天"/>
+                            android:text="7天"
+                            android:textColor="@color/black"
+                            android:textSize="13dp"/>
 
                         <TextView
                             android:id="@+id/id_tvv_7"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="100"
-                            android:textColor="@color/bg_r_5"
+                            android:textSize="12dp"
+                            android:textColor="@color/bg_r_2"
                             android:visibility="gone"/>
 
                         <ImageView
@@ -385,14 +417,38 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@mipmap/qdlh"/>
+                        <ImageView
+                            android:id="@+id/id_iv_7_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@mipmap/gs"
+                            android:visibility="gone"/>
                     </LinearLayout>
 
                 </LinearLayout>
 
             </LinearLayout>
 
+            <TextView
+                android:layout_marginTop="120dp"
+                android:id="@+id/id_btn_ljqd"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/btn_save"
+                android:gravity="center"
+                android:minWidth="78dp"
+                android:text="@string/tv_ljqd"
+                android:textColor="@color/white"
+                android:textSize="14dp" />
+
         </androidx.cardview.widget.CardView>
     </FrameLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
     <androidx.cardview.widget.CardView
         android:layout_marginLeft="10dp"
@@ -427,7 +483,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/tv_mrrw"
-                    android:textSize="14sp"
+                    android:textSize="16dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"/>
                 <TextView
@@ -435,7 +491,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/tv_mrrw_tip"
                     android:textColor="@color/bg_r_8"
-                    android:textSize="11sp"/>
+                    android:textSize="13dp"/>
             </LinearLayout>
 
 
@@ -452,14 +508,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:textSize="14sp"
+                        android:textSize="16dp"
                         android:textStyle="bold"
                         android:text="@string/tv_gkgg"/>
 
                     <TextView
+                        android:id="@+id/tv_ggtip"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="11sp"
+                        android:textSize="12dp"
                         android:textColor="@color/bg_b_1"
                         android:text="@string/tv_qdjl_tip"/>
 
@@ -476,7 +533,7 @@
                     android:minWidth="78dp"
                     android:text="@string/tv_kggtj"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="13dp" />
             </RelativeLayout>
 
             <View
@@ -500,14 +557,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:textSize="14sp"
+                        android:textSize="16dp"
                         android:textStyle="bold"
                         android:text="@string/tv_kspcj"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="11sp"
+                        android:textSize="12dp"
                         android:textColor="@color/bg_b_1"
                         android:text="@string/tv_jfcj_tip"/>
 
@@ -522,9 +579,9 @@
                     android:background="@drawable/bg_red_16_1"
                     android:gravity="center"
                     android:minWidth="78dp"
-                    android:text="@string/tv_mfcj"
+                    android:text="@string/tv_ljcj_0"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="13dp" />
             </RelativeLayout>
 
             <View
@@ -550,7 +607,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/tv_jfsc"
                         android:textColor="@color/black"
-                        android:textSize="14sp"
+                        android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -558,7 +615,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/tv_jfsc_tip"
                         android:textColor="@color/bg_b_1"
-                        android:textSize="11sp" />
+                        android:textSize="12dp" />
 
                 </LinearLayout>
 
@@ -573,7 +630,7 @@
                     android:minWidth="78dp"
                     android:text="@string/tv_ljdh"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="13dp" />
             </RelativeLayout>
         </LinearLayout>
 
@@ -581,5 +638,6 @@
     </androidx.cardview.widget.CardView>
 
 
+    </ScrollView>
 
 </LinearLayout>
