--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,4 +41,13 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="text_style_noselected">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="text_style_selected">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/bg_r_3</item>
+    </style>
+
 </resources>
