--- a/app/src/main/res/layout/fragment_ghsc.xml
+++ b/app/src/main/res/layout/fragment_ghsc.xml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GhscFragment"
-    android:id="@+id/id_ghsc_main">
+    android:id="@+id/id_ghsc_main"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:orientation="horizontal"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:background="@color/bg_r"
+        android:gravity="bottom"
+        tools:ignore="RtlSymmetry">
+
+
+        <ImageView
+            android:id="@+id/id_btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_centerVertical="true"
+            android:paddingTop="10dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:src="@mipmap/zjt_b"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/id_title"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="@string/tv_bxgh"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
     <com.youzan.androidsdkx5.YouzanBrowser
         android:id="@+id/id_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.youzan.androidsdkx5.YouzanBrowser>
-</FrameLayout>
+</LinearLayout>
