--- a/app/src/main/res/layout/index_bottom_tab.xml
+++ b/app/src/main/res/layout/index_bottom_tab.xml
@@ -23,8 +23,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tv_zcgh"
+            android:text="@string/tv_jpgh"
             android:id="@+id/id_tab_text_1"
+            android:textSize="13dp"
             android:layout_gravity="center"
             android:gravity="center"/>
     </LinearLayout>
@@ -47,6 +48,7 @@
             android:layout_height="wrap_content"
             android:text="@string/tv_qdjl"
             android:id="@+id/id_tab_text_2"
+            android:textSize="13dp"
             android:layout_gravity="center"
             android:gravity="center"/>
     </LinearLayout>
@@ -70,6 +72,7 @@
             android:layout_height="wrap_content"
             android:text="@string/tv_grzx"
             android:id="@+id/id_tab_text_3"
+            android:textSize="13dp"
             android:layout_gravity="center"
             android:gravity="center"/>
     </LinearLayout>
