--- a/app/src/main/res/layout/qd_item.xml
+++ b/app/src/main/res/layout/qd_item.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tv_qdcg"
-        android:textSize="19.37sp"
+        android:textSize="19.37dp"
         android:textColor="@color/bg_r_4"
         android:textStyle="bold"/>
 
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
-            android:textSize="60.67sp"
+            android:textSize="60.67dp"
             android:textColor="@color/bg_r_4"/>
         <TextView
             android:layout_marginLeft="5dp"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:text="@string/tv_ksptip"
             android:textColor="@color/bg_r_4"
-            android:textSize="14sp"/>
+            android:textSize="14dp"/>
         <TextView
             android:id="@+id/id_jf2"
             android:paddingLeft="2dp"
@@ -63,13 +63,13 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:textColor="@color/bg_r_4"
-            android:textSize="14sp"/>
+            android:textSize="14dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tv_jf"
             android:textColor="@color/bg_r_4"
-            android:textSize="14sp"/>
+            android:textSize="14dp"/>
     </LinearLayout>
 
 
@@ -85,7 +85,7 @@
         android:text="@string/tv_zdl"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="14sp"/>
+        android:textSize="14dp"/>
 
     <LinearLayout
         android:layout_margin="24dp"
