--- a/app/src/main/res/layout/qdgz_item.xml
+++ b/app/src/main/res/layout/qdgz_item.xml
@@ -13,15 +13,33 @@
         android:orientation="vertical"
         android:background="@drawable/bg_red_8_1">
 
-        <TextView
-            android:paddingTop="29.5dp"
-            android:paddingBottom="26dp"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/tv_hdgz"
-            android:background="@color/white"
-            android:gravity="center"
-            android:textSize="14sp"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/id_title"
+                android:paddingTop="29.5dp"
+                android:paddingBottom="26dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_qdgz"
+                android:background="@color/white"
+                android:gravity="center"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+            <ImageView
+                android:id="@+id/id_btn_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_margin="10dp"
+                android:background="@mipmap/cj_r_del"
+                android:backgroundTint="@color/bg_r_3"/>
+
+        </RelativeLayout>
 
         <WebView
             android:id="@+id/id_webview"
@@ -29,6 +47,21 @@
             android:layout_height="match_parent"
             android:padding="12dp"
             android:background="@color/white"/>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/tv_qdgz"
+                android:padding="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"/>
+
+        </ScrollView>
 
     </LinearLayout>
 
